# UCamera

./: .gitignore  C++新特性.md  TODOLIST.md  camera.md  git.md  glm.md  local.properties  taskflow源码分析.md  毕设选题.md  监控模块.md
app/: CMakeLists.txt  TODOLIST.md  build.gradle  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/src/androidTest/java/com/zxx/camera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragmentOES.fsh  vertexOES.vsh
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/OpenGLUtils/: EGLHelper.h  EGLThread.h  GLUtil.cpp
app/src/main/cpp/OpenGLUtils/include/: EGLHelper.h  EGLThread.h  GLUtil.h
app/src/main/cpp/base/: IUThreadPool.cpp
app/src/main/cpp/base/glutils/include/: UFrameBuffer.h  USharedGLContext.h  USizei.h
app/src/main/cpp/base/include/: IUThreadPool.h
app/src/main/cpp/ffmpeg/include/libavutil/: avconfig.h  common.h
app/src/main/cpp/inc/: DrawerOES.h  EGLThread.h  GLUtil.h  JavaListener.h  LogUtils.h  Mat.h  Thread.h  Trangles.h  UResult.h
app/src/main/cpp/src/: DrawerOES.cpp  EGLHelper.cpp  EGLThread.cpp  GLUtil.cpp  JavaListener.cpp  Thread.cpp  Trangles.cpp  cameranative-lib.cpp  native-lib.cpp
app/src/main/cpp/thrid-party/: cJSON.cpp
app/src/main/cpp/thrid-party/include/: cJSON.h
app/src/main/cpp/unique/base/: CBundle.cpp  IThreadPool.cpp  IUTaskQueue.cpp  UAndroidJni.cpp  UCameraFrame.cpp  UGLShareContext.cpp  UGLTaskQueue.cpp  UJClassBase.cpp  UMsg.cpp  UMsgThread.cpp
app/src/main/cpp/unique/base/include/: CBundle.h  GLHolder.h  IThreadPool.h  IUTaskQueue.h  IUThreadPool.h  UAndroidJni.h  UBaseFrame.h  UCameraFrame.h  UFrameBuffer.h  UGLShareContext.h  UGLTaskQueue.h  UJClassBase.h  UMsg.h  UMsgThread.h  URecordThreadPool.h  USizei.h  UTask.h  UTaskBlock.h  UThreadId.h
app/src/main/cpp/unique/camera/: CameraProxy.cpp
app/src/main/cpp/unique/camera/include/: CameraFrameSettings.h  CameraProxy.h
app/src/main/cpp/unique/common/include/: UPipeline.h
app/src/main/cpp/unique/core/: IUBin.cpp  IUGraph.cpp  IUUnit.cpp  IUUnitBin.cpp  UGraph.cpp  UUnitBase.cpp
app/src/main/cpp/unique/core/impl/include/: UUnitDef.h
app/src/main/cpp/unique/core/include/: IUBin.h  IUGraph.h  IUUnit.h  IUUnitBin.h  UGraph.h  UGraphSession.h  UUnitBase.h
app/src/main/cpp/unique/engine/: IUEngine.cpp  UEngineBuilder.cpp  UEngineContext.cpp  UEngineController.cpp  UMediaEngine.cpp  UMediaGraph.cpp  UregisterMediaUnit.cpp
app/src/main/cpp/unique/engine/include/: IUEngine.h  UEngineBuilder.h  UEngineContext.h  UEngineController.h  UMediaEngine.h  UMediaGraph.h  UregisterMediaUnit.h
app/src/main/cpp/unique/ffmpegwraper/: UFFMpegFileWriter.cpp  UFFMpegFileWriter.h
app/src/main/cpp/unique/include/: UDef.h  UResult.h
app/src/main/java/com/zxx/: MainActivity.java
app/src/main/java/com/zxx/camera/: EGLCameraActivity.java  GLSurfaceActivity.java  MainActivity.java  NativeCameraActivity.java  NativeTranglesActivity.java  TriangleActivity.java  newEGLCamera2Activity.java
app/src/main/java/com/zxx/camera/Activity/: DecodeActivity.java  EGLCameraActivity.java  GLSurfaceActivity.java  MainActivity.java  NativeCameraActivity.java  TriangleActivity.java  newEGLCamera2Activity.java  testMediaCodecActivity.java
app/src/main/java/com/zxx/camera/Camera/: CameraClient.java  CameraSettings.java  CameraState.java  ResManage.java  ScreenOrientationDetector.java  camera2Proxy.java
app/src/main/java/com/zxx/camera/Monitor/: MonitorBase.java
app/src/main/java/com/zxx/camera/Utils/: EGLbase.java  HwDecoder.java  ImageUtils.java  OpenGLutil.java
app/src/main/java/com/zxx/camera/View/: Camera2GLSurfaceView.java  Camera2SurfaceView.java  EglSurfaceView.java  NativeTrangleSurfaceView.java  SurfaceCamera2Activity.java
app/src/main/java/com/zxx/camera/glSurfaceview/: Camera2GLSurfaceView.java  CameraDrawer.java  OpenGLutil.java
app/src/main/java/com/zxx/camera/mediacodec/: MediaCodecAsyncEncoder.java  MediaCodecEncoder.java  MediaCodecEncoderCallback.java  MediaCodecInfoWrapper.java  MediaCodecResult.java  MediaCodecSettings.java  MediaCodecUtils.java  MediaFrame.java  MediaMutexWrapper.java  YuvTextureDrawer.java
app/src/main/java/com/zxx/camera/presenter/: CircularEncoder.java  CircularEncoderBuffer.java  HWEncodeManager.java
app/src/main/java/com/zxx/camera/renderer/: CameraRender.java  EGLRender.java  NativeCameraRender.java  NativeTrangleRender.java  TextureRenderer.java  TriangleRenderer.java
app/src/main/java/com/zxx/camera/surfaceview/: Camera2SurfaceView.java  SurfaceCamera2Activity.java
app/src/main/java/com/zxx/unique/camera/: Camera2Proxy.java  CameraFactory.java  CameraResourcesManage.java  CameraSettings.java  UqCamera2Proxy.java  UqCameraBase.java  UqCameraClient.java  UqCameraFactory.java  UqCameraResManager.java  UqCameraResult.java  UqCameraRunTime.java  UqCameraSettings.java  cameraProxy.java
app/src/main/java/com/zxx/unique/camera/inter/: IUqCamera.java  IUqPreview.java
app/src/main/java/com/zxx/unique/gles/: EglCore.java  GlUtils.java
app/src/main/java/com/zxx/unique/mediacodec/: MediaCodecAsyncEncoder.java  MediaCodecEncoder.java  MediaCodecEncoderCallback.java  MediaCodecInfoWrapper.java  MediaCodecResult.java  MediaCodecSettings.java  MediaCodecUtils.java  MediaFrame.java  MediaMutexWrapper.java  YuvTextureDrawer.java
app/src/main/java/com/zxx/unique/utils/: ConcurrentList.java  UqSize.java
app/src/main/res/drawable/: click_button_selector.xml
app/src/main/res/layout/: activity_eglbase.xml  activity_glsurface_camera2.xml  activity_glsurfacecamera2.xml  activity_main.xml  activity_native_camera.xml  activity_native_trangle.xml  activity_new_eglsurface.xml  activity_triangle.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/zxx/camera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
